--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,22 @@
-h1 {
-  font-family: "Poppins", sans-serif;
+:root {
+  --primary-font:"Playfair Display", serif;
+  --secondary-font: "Poppins", sans-serif;
 }
-h2 {
-  font-family: "Playfair Display", serif;
+
+.hero {
+  background-color: #f9f7ff;
+  padding: 160px;
+}
+
+h1 {
+  font-family: var(--primary-font);
+  font-size: 60px;
+  font-weight: 800;
+}
+p {
+  font-family: var(--secondary-font)
   font-weight: bold;
+}
+.ml-pic {
+  max-width: 350px;
 }
