--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,17 @@
 :root {
   --primary-font: "Playfair Display", serif;
   --secondary-font: "Poppins", sans-serif;
+  --primary-color: #fae7e9;
+  --secondary-color: #84a35d;
 }
 
 .hero {
-  background-color: #f9f7ff;
+  background-color: var(--primary-color);
   padding: 160px;
 }
 
 h1 {
+  color: var(--secondary-color);
   font-family: var(--primary-font);
   font-size: 60px;
   font-weight: 800;
