--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@
   padding: 160px;
 }
 
+.hero {
+  padding-bottom: 60px;
+}
+
 h1 {
   color: var(--secondary-color);
   font-family: var(--primary-font);
