--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 .hero {
   background-color: var(--primary-color);
   padding: 160px;
-  padding-bottom: 60px;
+  padding-bottom: 180px;
 }
 
 .projects-header,
@@ -68,4 +68,7 @@ p {
 
 .interests-section {
   padding-bottom: 160px;
+}
+hr {
+  color: var(--secondary-color);
 }
