--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,6 @@
   background-color: white;
   padding-left: 160px;
   padding-top: 70px;
-  padding-bottom: 70px;
 }
 
 h1 {
@@ -62,4 +61,7 @@ p {
 }
 hr {
   color: var(--secondary-color);
+}
+.app {
+  padding-top: 60px;
 }
