--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,6 @@ h1,
 }
 p {
   font-family: var(--secondary-font);
-  font-weight: bold;
 }
 .ml-pic {
   max-width: 350px;
@@ -49,12 +48,21 @@ p {
 .work-experience-section,
 .skills-section,
 .interests-section {
-  padding: 40px;
+  padding-top: 40px;
   padding-bottom: 100px;
 }
 
+.work-experience-section {
+  padding-left: 100px;
+}
+
 .skills-section {
-  padding-bottom: 40px;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.interests-section {
+  padding-right: 100px;
 }
 
 .app-preview-display {
@@ -70,4 +78,10 @@ hr {
 .header {
   font-family: var(--primary-font);
   font-weight: bold;
+}
+.navbar-brand,
+.nav-link,
+.btn,
+li {
+  font-family: var(--secondary-font);
 }
