--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,11 @@ li {
 
 @media (max-width: 960px) {
   .hero {
-    padding: 0px;
+    padding: 20px;
+    padding-top: 100px;
+  }
+  .ml-pic {
+    max-width: 100px;
   }
   h1 {
     font-size: 40px;
