--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,8 @@
 .about-me-header {
   background-color: white;
   padding-left: 160px;
-  padding-top: 70px;
-  padding-bottom: 0px;
+  padding-top: 160px;
+  padding-bottom: 30px;
 }
 
 h1,
@@ -47,9 +47,20 @@ p {
 }
 
 .work-experience-section {
-  padding-top: 40px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
+.work-experience-section,
+.skills-section,
+.interests-section {
+  padding-left: 160px;
+  padding-right: 160px;
+}
+.interests-section {
+  padding-top: 30px;
+  padding-bottom: 160px;
+}
 .app-preview-display {
   padding-bottom: 160px;
 }
