--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,9 @@
 .hero {
   background-color: var(--primary-color);
   padding: 160px;
-  padding-bottom: 190px;
+}
+.job-title {
+  font-size: 20px;
 }
 
 .projects-header,
@@ -31,7 +33,7 @@ p {
   font-family: var(--secondary-font);
 }
 .ml-pic {
-  max-width: 350px;
+  max-width: 400px;
   padding-left: 40px;
 }
 
