Added padding to Interests Section

--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,9 @@ li {
     padding: 20px;
     font-size: 12px;
   }
+  .interests-section {
+    padding-bottom: 80px;
+  }
   .btn {
     padding: 5px 3px;
     font-size: 10px;
