--- a/src/style.css
+++ b/src/style.css
@@ -92,7 +92,7 @@ li {
     text-align: center;
   }
   .ml-pic {
-    max-width: 200px;
+    max-width: 100px;
     padding-right: 10px;
     padding-left: 10px;
   }
@@ -105,12 +105,16 @@ li {
   h1,
   .about-me-header,
   .projects-header {
-    font-size: 45px;
     padding: 20px;
     text-align: center;
   }
+  h1 {
+    font-size: 55px;
+  }
+
   .about-me-header,
   .projects-header {
+    font-size: 45px;
     padding-top: 80px;
     padding-bottom: 40px;
   }
