--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ li {
   .job-title {
     font-size: 20px;
     padding-right: 20px;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
   }
   h1,
   .about-me-header,
@@ -175,5 +175,12 @@ li {
   .boba-app {
     padding-left: 5px !important;
     padding-right: 5px !important;
+  }
+  .ml-pic {
+    display: block;
+    margin: 0 auto;
+    max-width: 350px;
+    padding-bottom: 20px;
+    padding-top: 0px;
   }
 }
