--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ li {
   .job-title {
     font-size: 20px;
     padding-right: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
   }
   h1,
   .about-me-header,
@@ -179,8 +179,7 @@ li {
   .ml-pic {
     display: block;
     margin: 0 auto;
-    max-width: 350px;
-    padding-bottom: 20px;
-    padding-top: 0px;
+    max-width: 300px;
+    padding: 0px;
   }
 }
