Edited padding Project and About headers

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
 .projects-header,
 .about-me-header {
   background-color: white;
+  padding-top: 100px;
   padding-left: 160px;
   padding-top: 160px;
   padding-bottom: 30px;
