--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 .hero {
   background-color: var(--primary-color);
   padding: 160px;
+  padding-bottom: 100px;
 }
 .job-title {
   font-size: 20px;
