--- a/src/style.css
+++ b/src/style.css
@@ -16,10 +16,9 @@
 
 .projects-header,
 .about-me-header {
-  background-color: white;
+  background-color: var(--primary-color);
   padding-top: 100px;
   padding-left: 160px;
-  padding-top: 160px;
   padding-bottom: 30px;
 }
 
@@ -92,6 +91,18 @@ li {
 .navbar-brand:hover,
 .nav-link:hover {
   color: var(--secondary-color) !important;
+}
+
+.boba-image,
+.portfolio-image {
+  margin-right: 60px;
+}
+
+.boba-app,
+.weather-app,
+.portfolio-app,
+.app-description {
+  text-align: left;
 }
 
 @media (max-width: 960px) {
@@ -169,6 +180,7 @@ li {
     padding-bottom: 5px !important;
     padding-left: 2px !important;
     padding-right: 2px !important;
+    text-align: center;
   }
 
   .ml-pic {
