--- a/src/style.css
+++ b/src/style.css
@@ -97,7 +97,9 @@ li {
 .portfolio-image {
   margin-right: 60px;
 }
-
+.weather-image {
+  margin-left: 60px;
+}
 .boba-app,
 .weather-app,
 .portfolio-app,
@@ -105,6 +107,9 @@ li {
   text-align: left;
 }
 
+.app-launch-btn {
+  margin-right: 460px;
+}
 @media (max-width: 960px) {
   .hero {
     padding: 20px;
