--- a/src/style.css
+++ b/src/style.css
@@ -200,4 +200,8 @@ li {
     padding-bottom: 25px;
     padding-top: 30px;
   }
+  .app-preview-display {
+    margin: 0px;
+    text-align: center;
+  }
 }
